log
Fri Mar 20 05:46:41 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
2d8f03a
Fri Mar 20 06:03:18 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:4: error: unknown type name ‘stack’; did you mean ‘Stack’?
   79 |    stack* pila_aux=create_stack();
      |    ^~~~~
      |    Stack
exercises.c:79:20: error: initialization of ‘int *’ from incompatible pointer type ‘Stack *’ {aka ‘List *’} [-Wincompatible-pointer-types]
   79 |    stack* pila_aux=create_stack();
      |                    ^~~~~~~~~~~~
exercises.c:82:12: error: ‘aux’ undeclared (first use in this function)
   82 |       push(aux, elemento);
      |            ^~~
exercises.c:82:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:79:11: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
   79 |    stack* pila_aux=create_stack();
      |           ^~~~~~~~
cc1: all warnings being treated as errors
a0ef2e4
Fri Mar 20 06:05:09 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:79:4: error: unknown type name ‘stack’; did you mean ‘Stack’?
   79 |    stack* pila_aux=create_stack();
      |    ^~~~~
      |    Stack
exercises.c:79:20: error: initialization of ‘int *’ from incompatible pointer type ‘Stack *’ {aka ‘List *’} [-Wincompatible-pointer-types]
   79 |    stack* pila_aux=create_stack();
      |                    ^~~~~~~~~~~~
exercises.c:82:12: error: ‘aux’ undeclared (first use in this function)
   82 |       push(aux, elemento);
      |            ^~~
exercises.c:82:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:79:11: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
   79 |    stack* pila_aux=create_stack();
      |           ^~~~~~~~
cc1: all warnings being treated as errors
b615400
Fri Mar 20 06:06:15 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:82:12: error: ‘aux’ undeclared (first use in this function)
   82 |       push(aux, elemento);
      |            ^~~
exercises.c:82:12: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:79:11: error: unused variable ‘pila_aux’ [-Werror=unused-variable]
   79 |    Stack* pila_aux=create_stack();
      |           ^~~~~~~~
cc1: all warnings being treated as errors
0814395
Fri Mar 20 06:06:52 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
88e86c3
Fri Mar 20 06:10:23 PM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  0|5
total_score: 0/70
917d007
Fri Mar 20 06:11:08 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1e379f6
Fri Mar 20 06:12:24 PM UTC 2026: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|4
total_score: 10/70
dc92c8c
Fri Mar 20 06:19:40 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
4f3d8f5
Fri Mar 20 11:46:34 PM UTC 2026: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
5ce0212
Sat Mar 21 12:51:54 AM UTC 2026: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|3
total_score: 20/70
2ab4a99
Sat Mar 21 12:54:23 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
1c51451
Sat Mar 21 12:54:38 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
79b6758
Sat Mar 21 12:55:20 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:50:19: error: invalid type argument of unary ‘*’ (have ‘int’)
   50 |       pushBack(L, *num[i]);
      |                   ^~~~~~~
aba8ceb
Sat Mar 21 12:56:43 AM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 30/70
d2d2faa
Sat Mar 21 01:56:56 AM UTC 2026: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  4|1
total_score: 50/70
fea31aa
Sat Mar 21 08:01:43 PM UTC 2026: 
 exercises.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  4|1
total_score: 50/70
c6f00b5
